소개 페이지 완성

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,6 +13,17 @@
   font-family: "BagelFatOne", sans-serif;
 }
 
+@font-face {
+  font-family: "LINESeedKR-Th";
+  src: url("/fonts/LINESeedKR-Th.woff") format("woff");
+  font-weight: 300;
+  font-style: normal;
+}
+
+.line-seed-kr {
+  font-family: "LINESeedKR-Th", sans-serif;
+}
+
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
